<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:text="@string/product_name" />
        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_product_name_here" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:text="@string/price" />
        <EditText
            android:id="@+id/price"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:text="@string/quantity" />
        <EditText
            android:id="@+id/quantity"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:text="@string/supplier_name" />
        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name_here" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:text="@string/supplier_number" />
        <EditText
            android:id="@+id/supplier_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_number_here"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>
